- fix bug menu on mobile

--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -1,9 +1,17 @@
 @media (max-width: 767px) {
+  #nav {
+    display: block;
+  }
   #nav li {
     display: block;
+  }
+  #nav li:first-child {
+    display: inline-block;
   }
   #header .search-btn {
     display: none;
   }
+  #header .mobile-menu-btn {
+    display: block;
+  }
 }
-/*# sourceMappingURL=responsive.css.map */
