--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -111,8 +111,11 @@ html {
     }
 
     .mobile-menu-btn {
-        float: right;
+        display: none;
         padding: 0 21px;
+        position: absolute;
+        top: 0;
+        right: 0;
 
         &:hover {
             background-color: #ccc;
